--- a/cmd/web/SignOutButton.templ
+++ b/cmd/web/SignOutButton.templ
@@ -1,8 +1,11 @@
 package web
 
 templ SignOutButton() {
-<a href="/auth/logout?provider=google" type="button"
-    class="w-full h-8 flex items-center justify-center bg-white border border-button-border-light rounded-md p-0.5 pr-3 gap-x-2">
-    <span class="text-sm text-google-text-gray tracking-wider text-center">Sign Out</span>
-</a>
+	<a
+		href="/auth/logout?provider=google"
+		type="button"
+		class="text-white bg-gray-500 hover:bg-gray-600 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 transition ease-in-out"
+	>
+		<span class="text-sm text-google-text-gray tracking-wider text-center">Sign Out</span>
+	</a>
 }
