--- a/cmd/web/base.templ
+++ b/cmd/web/base.templ
@@ -2,7 +2,7 @@ package web
 
 templ Base() {
 	<!DOCTYPE html>
-	<html lang="en" class="h-screen">
+	<html lang="en" class="h-screen" hx-get="/" hx-trigger="load">
 		<head>
 			<meta charset="utf-8"/>
 			<title>Book It</title>
@@ -14,8 +14,13 @@ templ Base() {
 			<link href="https://unpkg.com/flowbite@1.6.5/dist/flowbite.min.css" rel="stylesheet"/>
 		</head>
 		<body class="bg-gray-100">
+			// tailwind flowbite 
 			<main class="max-w-6xl mx-auto p-4">
-				{ children... }
+				<div class="flex flex-col"></div>
+				<div id="navbar-container" hx-get="/navbar" hx-trigger="load" hx-swap="outerHTML"></div>
+				<div id="content-container" class="pt-12">
+					{ children... }
+				</div>
 			</main>
 		</body>
 	</html>
