--- a/cmd/web/books/buttons.templ
+++ b/cmd/web/books/buttons.templ
@@ -2,18 +2,58 @@ package web_books
 
 import "fmt"
 
-templ Button(bookID string, isBookInUserBooks bool) {
+templ WantToReadButton(bookID string, isBookInUserBooks bool) {
 	if isBookInUserBooks {
 		<button
 			hx-delete={ fmt.Sprintf("/user-books/%s", bookID) }
 			hx-swap="outerHTML transition:true"
+			hx-target="this"
 			class="font-medium text-red-600 dark:text-red-500 transition ease-in-out delay-150 hover:scale-110"
 		>Remove from my books</button>
 	} else {
-		<button
-			hx-post={ fmt.Sprintf("/user-books/%s", bookID) }
-			hx-swap="outerHTML transition:true"
-			class="font-medium text-green-600 dark:text-red-500 transition ease-in-out delay-150 hover:scale-110"
-		>Want to read</button>
+		<div id="wantToReadButton" class="relative inline-block">
+			<!-- Button -->
+			<button
+				_="on click toggle .hidden on #dropdown"
+				id="dropdownDefaultButton"
+				class="text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
+				type="button"
+			>
+				Add to Bookshelf
+				<svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+					<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"></path>
+				</svg>
+			</button>
+			<!-- Dropdown menu -->
+			<div
+				_="on click from body
+                    if event.target is not in #dropdownDefaultButton and I do not match .hidden
+                        add .hidden"
+				id="dropdown"
+				class="absolute z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"
+				style="top: 100%; left: 0;"
+			>
+				<ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton">
+					<li>
+						<a
+							href="#"
+							hx-post={ fmt.Sprintf("/user-books/%s", bookID) }
+							hx-swap="outerHTML transition:true"
+							hx-target="#wantToReadButton"
+							class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
+						>Want to read</a>
+					</li>
+					<li>
+						<a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Settings</a>
+					</li>
+					<li>
+						<a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Earnings</a>
+					</li>
+					<li>
+						<a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Sign out</a>
+					</li>
+				</ul>
+			</div>
+		</div>
 	}
 }
