--- a/cmd/web/books/search.templ
+++ b/cmd/web/books/search.templ
@@ -8,9 +8,8 @@ import (
 )
 
 templ BooksSearch() {
-	@web.Navbar()
 	@web.Base() {
-		<div class="pt-12 justify-items-center">
+		<div class="pt-12 justify-items-center" hx-target="content-container" hx-swap="innerHTML">
 			<form class="pb-3 max-w-md mx-auto" hx-post="/books" method="POST" hx-target="#books-container">
 				<label
 					for="default-search"
@@ -56,8 +55,8 @@ templ BooksSearch() {
 templ BooksPost(books []schemas.Book, userBooks []models.UserBook) {
 	for _, book := range books {
 		<tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
-			<td class="w-2/12 px-3 py-2">
-				<img src={ book.ImageLink } alt="img" class="w-auto h-32 object-cover shadow-sm"/>
+			<td class="w-1/12 px-3 py-2">
+				<img src={ book.ImageLink } alt="img" class="w-auto h-24 object-cover shadow-sm"/>
 			</td>
 			<td class="w-max px-3 py-2">
 				<div class="flex flex-col">
@@ -73,12 +72,7 @@ templ BooksPost(books []schemas.Book, userBooks []models.UserBook) {
 				</div>
 			</td>
 			<td class="w-1/5 px-3 py-2">
-				@Button(book.ID, utils.BookInUserBooks(book.ID, userBooks))
-				<!-- if !utils.BookInUserBooks(book.ID, userBooks) { -->
-				<!-- 	@CreateButton(book.ID) -->
-				<!-- } else { -->
-				<!-- 	@DeleteButton(book.ID) -->
-				<!-- } -->
+				@WantToReadButton(book.ID, utils.BookInUserBooks(book.ID, userBooks))
 			</td>
 		</tr>
 	}
