--- a/cmd/web/signInButton.templ
+++ b/cmd/web/signInButton.templ
@@ -1,26 +1,26 @@
 package web
 
 templ SignInButton() {
-<a href="/auth/?provider=google" type="button" aria-label="Continue with Google"
-    class="w-full flex items-center justify-center bg-white border border-button-border-light rounded-md p-0.5 pr-3 gap-x-2">
-    <div class="flex items-center justify-center bg-white w-9 h-9 rounded-l">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-5 h-5">
-            <title>Sign in with Google</title>
-            <desc>Google G Logo</desc>
-            <path
-                d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"
-                class="fill-google-logo-blue"></path>
-            <path
-                d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"
-                class="fill-google-logo-green"></path>
-            <path
-                d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"
-                class="fill-google-logo-yellow"></path>
-            <path
-                d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"
-                class="fill-google-logo-red"></path>
-        </svg>
-    </div>
-    <span class="text-sm text-google-text-gray tracking-wider text-center">Continue with Google</span>
-</a>
+	<!-- <a -->
+	<!-- 	href="/auth/?provider=google" -->
+	<!-- 	type="button" -->
+	<!-- 	aria-label="Continue with Google" -->
+	<!-- 	class="text-white bg-gray-500 hover:bg-gray-600 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 transition ease-in-out" -->
+	<!-- > -->
+	<!-- 	<div class="flex items-center justify-center bg-white w-9 h-9 rounded-l"> -->
+	<!-- 		<svg img="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Google_%22G%22_logo.svg/2048px-Google_%22G%22_logo.svg.png" viewBox="0 0 24 24" class="w-5 h-5"> -->
+	<!-- 			<title>Sign in with Google</title> -->
+	<!-- 			<desc>Google G Logo</desc> -->
+	<!-- 		</svg> -->
+	<!-- 	</div> -->
+	<!-- 	<span class="text-sm text-google-text-gray tracking-wider text-center">Continue with Google</span> -->
+	<!-- </a> -->
+	<a
+		href="/auth/?provider=google"
+		type="button"
+		class="px-4 py-2 border flex gap-2 border-slate-200 dark:border-slate-700 rounded-lg text-slate-700 dark:text-slate-200 hover:border-slate-400 dark:hover:border-slate-500 hover:text-slate-900 dark:hover:text-slate-300 hover:shadow transition duration-150"
+	>
+		<img class="w-6 h-6" src="https://www.svgrepo.com/show/475656/google-color.svg" loading="lazy" alt="google logo"/>
+		<span>Login with Google</span>
+	</a>
 }
