--- a/cmd/web/books/search.templ
+++ b/cmd/web/books/search.templ
@@ -1,53 +1,49 @@
 package web_books
 
 import (
-	"github.com/FilipBudzynski/book_it/cmd/web"
-	"github.com/FilipBudzynski/book_it/pkg/schemas"
 	"github.com/FilipBudzynski/book_it/pkg/models"
 	"github.com/FilipBudzynski/book_it/utils"
 )
 
 templ BooksSearch() {
-	@web.Base() {
-		<div class="flex flex-col items-center mx-10 md:mx-20">
-			<form
-				hx-post="/books"
-				method="POST"
-				hx-target="#books-container"
-				class="w-3/5 mx-12 mb-4"
-			>
-				<label class="input input-sm flex items-center">
-					<input
-						type="search"
-						id="book-title"
-						name="book-title"
-						class="grow"
-						placeholder="Search for new reads"
-					/>
-					<button
-						type="submit"
+	<div class="flex flex-col items-center mx-10 md:mx-20">
+		<form
+			hx-post="/books"
+			method="POST"
+			hx-target="#books-container"
+			class="w-3/5 mx-12 mb-4"
+		>
+			<label class="input input-sm flex items-center">
+				<input
+					type="search"
+					id="book-title"
+					name="book-title"
+					class="grow"
+					placeholder="Search for new reads"
+				/>
+				<button
+					type="submit"
+				>
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						viewBox="0 0 16 16"
+						fill="currentColor"
+						class="h-4 w-4 opacity-70"
 					>
-						<svg
-							xmlns="http://www.w3.org/2000/svg"
-							viewBox="0 0 16 16"
-							fill="currentColor"
-							class="h-4 w-4 opacity-70"
-						>
-							<path
-								fill-rule="evenodd"
-								d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z"
-								clip-rule="evenodd"
-							></path>
-						</svg>
-					</button>
-				</label>
-			</form>
-			@BooksTable()
-		</div>
-	}
+						<path
+							fill-rule="evenodd"
+							d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z"
+							clip-rule="evenodd"
+						></path>
+					</svg>
+				</button>
+			</label>
+		</form>
+		@BooksTable()
+	</div>
 }
 
-templ BooksPost(books []schemas.Book, userBooks []models.UserBook) {
+templ BooksPost(books []*models.Book, userBooks []*models.UserBook) {
 	for _, book := range books {
 		<tr>
 			<td class="w-1/12 px-3 py-2">
@@ -60,9 +56,7 @@ templ BooksPost(books []schemas.Book, userBooks []models.UserBook) {
 					</span>
 					<span class="text-sm text-gray-300">
 						by 
-						for _, author := range book.Authors {
-							{ author }
-						}
+						{ book.Authors }
 					</span>
 				</div>
 			</td>
