--- a/cmd/web/navbar.templ
+++ b/cmd/web/navbar.templ
@@ -49,13 +49,13 @@ templ Navbar(user *models.User) {
 		<div class="navbar-center hidden lg:flex">
 			<ul class="menu menu-horizontal px-1">
 				<li>
-					<a href="/">Home</a>
+					<a href="#" hx-get="/" hx-target="#content-container" hx-swap="innerHTML" hx-push-url="true">Home</a>
 				</li>
 				<li>
-					<a href="/books">Search</a>
+					<a href="#" hx-get="/books" hx-target="#content-container" hx-swap="innerHTML" hx-push-url="true">Search</a>
 				</li>
 				<li>
-					<a href="/user-books">My Books</a>
+					<a href="#" hx-get="/user-books" hx-target="#content-container" hx-swap="innerHTML" hx-push-url="true">My Books</a>
 				</li>
 				<li>
 					<details class="z-50">
